Stopped the task answer box from jumping a lot
- Preserve the height of with a surrounding container
  using min-height property whenever the content
  of inside the test box is updated.

--- a/css/style.css
+++ b/css/style.css
@@ -943,10 +943,6 @@ body {
     width: 100%;
 }
 
-#task-view {
-    min-height: 125vh;
-}
-
 #task-view textarea {
     text-align: left;
     width: 100%;
